--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "homepage": "https://github.com/augmentedjs/chart-example#readme",
   "dependencies": {
-    "augmentedjs-next-chart": "^1.0.7",
-    "compression": "^1.7.2"
+    "compression": "^1.7.3",
+    "presentation-chart": "^1.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.2",
@@ -32,16 +32,16 @@
     "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "css-loader": "^0.28.11",
-    "express": "^4.16.3",
+    "express": "^4.16.4",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "jsdoc": "^3.5.5",
-    "jsdom": "^11.10.0",
+    "jsdom": "^11.12.0",
     "mocha": "^5.2.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.16.0",
-    "webpack-cli": "^2.1.5"
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2"
   }
 }
