--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "chart-example",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A simple class that renders a table like a bar chart",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --module-bind js=babel-loader --module-bind 'css=style-loader!css-loader' --progress",
-    "build": "webpack --mode production --module-bind js=babel-loader --module-bind 'css=style-loader!css-loader' --progress",
-    "test": "mocha --require babel-core/register --require test/helper.js -c test/*Spec.js",
+    "dev": "webpack --mode development --progress",
+    "build": "webpack --mode production --progress",
+    "test": "mocha --require @babel/register --require test/helper.js -c test/*Spec.js",
     "start": "node ./service/index.js",
     "clean": "rm -rf node_modules",
     "reinstall": "npm run clean && npm install",
@@ -22,26 +22,43 @@
     "url": "https://github.com/augmentedjs/chart-example/issues"
   },
   "homepage": "https://github.com/augmentedjs/chart-example#readme",
-  "dependencies": {
-    "compression": "^1.7.3",
-    "presentation-chart": "^1.2.2"
-  },
   "devDependencies": {
-    "babel-core": "^6.26.2",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-transform-regenerator": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.5.0",
+    "@babel/plugin-proposal-class-properties": "^7.5.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.0",
+    "@babel/plugin-transform-async-to-generator": "^7.5.0",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.5.0",
+    "@babel/register": "^7.4.4",
+    "acorn": "^6.2.0",
+    "acorn-dynamic-import": "^4.0.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "css-loader": "^0.28.11",
-    "express": "^4.16.4",
-    "file-loader": "^1.1.11",
+    "clean-webpack-plugin": "^2.0.2",
+    "compression": "^1.7.4",
+    "css-loader": "^3.0.0",
+    "express": "^4.17.1",
+    "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "jsdoc": "^3.5.5",
-    "jsdom": "^11.12.0",
-    "mocha": "^5.2.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2"
+    "identity-obj-proxy": "^3.0.0",
+    "jsdom": "^15.1.1",
+    "mini-css-extract-plugin": "^0.7.0",
+    "mocha": "^6.1.4",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.0.1",
+    "webpack": "^4.35.2",
+    "webpack-bundle-analyzer": "^3.3.2",
+    "webpack-cli": "^3.3.5",
+    "whatwg-fetch": "^3.0.0",
+    "winston": "^3.2.1"
+  },
+  "dependencies": {
+    "presentation-chart": "^1.3.0",
+    "presentation-css": "^3.2.1",
+    "typeface-roboto": "0.0.54"
   }
 }
