--- a/.babelrc
+++ b/.babelrc
@@ -1,21 +1,11 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/preset-env", {
       "targets": {
-        "browsers": ["safari 10", "firefox > 56", "not edge > 0", "ios 10", "chrome > 60", "not ie > 0", "not op_mini all"]
+        "browsers": ["safari 11", "firefox > 60", "not edge > 0", "ios 11", "chrome > 66", "not ie > 0", "not op_mini all"]
       },
-      "debug": true
-    }]
-  ],
-  "plugins": [
-    ["transform-regenerator", {
-      "asyncGenerators": true,
-      "generators": true,
-      "async": true
-    }],
-    ["transform-runtime", {
-      "polyfill": false,
-      "regenerator": true
+      "debug": true,
+      "modules": false
     }]
   ]
 }
