--- a/package.json
+++ b/package.json
@@ -1,45 +1,37 @@
 {
-  "name": "chart-example",
-  "version": "1.1.0",
-  "description": "A simple class that renders a table like a bar chart",
+  "name": "chart-example2",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development --progress",
-    "build": "webpack --mode production --progress",
-    "test": "mocha --require @babel/register --require test/helper.js -c test/*Spec.js",
     "start": "node ./service/index.js",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "test": "mocha --require @babel/register --require test/helper.js -c test/*Spec.js",
     "clean": "rm -rf node_modules",
     "reinstall": "npm run clean && npm install",
     "rebuild": "npm run clean && npm install && npm run build"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/augmentedjs/chart-example.git"
-  },
-  "author": "Bob Warren <robert_warren@gap.com>",
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/augmentedjs/chart-example/issues"
-  },
-  "homepage": "https://github.com/augmentedjs/chart-example#readme",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.5.0",
+    "@babel/core": "^7.5.4",
     "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
     "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.0",
+    "@babel/preset-env": "^7.5.4",
     "@babel/register": "^7.4.4",
     "acorn": "^6.2.0",
     "acorn-dynamic-import": "^4.0.0",
-    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^2.0.2",
-    "compression": "^1.7.4",
     "css-loader": "^3.0.0",
-    "express": "^4.17.1",
-    "file-loader": "^4.0.0",
+    "eslint": "^6.0.1",
+    "eslint-plugin-import": "^2.18.0",
     "html-webpack-plugin": "^3.2.0",
     "identity-obj-proxy": "^3.0.0",
     "jsdom": "^15.1.1",
@@ -48,16 +40,28 @@
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "url-loader": "^2.0.1",
-    "webpack": "^4.35.2",
+    "webpack": "^4.35.3",
     "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.3.5",
-    "whatwg-fetch": "^3.0.0",
-    "winston": "^3.2.1"
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
-    "presentation-chart": "^1.3.0",
-    "presentation-css": "^3.2.1",
-    "typeface-roboto": "0.0.54"
+    "compression": "^1.7.4",
+    "express": "^4.17.1",
+    "file-loader": "^4.0.0",
+    "material-icons": "^0.3.1",
+    "next-core-logger": "^2.6.0",
+    "presentation-application": "^2.8.1",
+    "presentation-components": "^2.8.8",
+    "presentation-css": "^3.3.0",
+    "presentation-dialogs": "^2.7.1",
+    "presentation-logger": "^2.6.2",
+    "presentation-mediator": "^2.7.1",
+    "presentation-router": "^2.6.7",
+    "typeface-roboto": "0.0.54",
+    "url-loader": "^2.0.1",
+    "whatwg-fetch": "^3.0.0",
+    "winston": "^3.2.1",
+    "presentation-chart": "^1.3.0"
   }
 }
