--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chart-example2",
-  "version": "1.0.0",
+  "name": "chart-example",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -16,52 +16,42 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
-    "@babel/plugin-transform-async-to-generator": "^7.5.0",
-    "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/register": "^7.4.4",
-    "acorn": "^6.2.0",
-    "acorn-dynamic-import": "^4.0.0",
-    "babel-eslint": "^10.0.2",
+    "@babel/core": "^7.6.2",
+    "@babel/preset-env": "^7.6.2",
+    "@babel/register": "^7.6.2",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "clean-webpack-plugin": "^2.0.2",
-    "css-loader": "^3.0.0",
-    "eslint": "^6.0.1",
-    "eslint-plugin-import": "^2.18.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "identity-obj-proxy": "^3.0.0",
     "jsdom": "^15.1.1",
-    "mini-css-extract-plugin": "^0.7.0",
-    "mocha": "^6.1.4",
+    "mini-css-extract-plugin": "^0.8.0",
+    "mocha": "^6.2.1",
     "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.35.3",
-    "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-cli": "^3.3.5",
-    "webpack-manifest-plugin": "^2.0.4"
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.0",
+    "webpack-bundle-analyzer": "^3.5.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-manifest-plugin": "^2.1.2"
   },
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.2.0",
     "material-icons": "^0.3.1",
-    "next-core-logger": "^2.6.0",
-    "presentation-application": "^2.8.1",
+    "next-core-logger": "^2.6.1",
+    "presentation-application": "^2.8.3",
+    "presentation-chart": "^1.3.0",
     "presentation-components": "^2.8.8",
     "presentation-css": "^3.3.0",
     "presentation-dialogs": "^2.7.1",
-    "presentation-logger": "^2.6.2",
+    "presentation-logger": "^2.6.4",
     "presentation-mediator": "^2.7.1",
     "presentation-router": "^2.6.7",
-    "typeface-roboto": "0.0.54",
-    "url-loader": "^2.0.1",
+    "typeface-roboto": "0.0.75",
+    "url-loader": "^2.1.0",
     "whatwg-fetch": "^3.0.0",
-    "winston": "^3.2.1",
-    "presentation-chart": "^1.3.0"
+    "winston": "^3.2.1"
   }
 }
